--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/frontend/node_modules
+/backend/node_modules
 
 # production
-/build
+/frontend/build
 
 # misc
 .DS_Store
