--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "axios": "^1.2.1",
     "chart.js": "^4.0.1",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.3",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.2",
+    "react-datepicker": "^4.8.0",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5"
   },
